# rs-micro

./: Cargo.toml  build.rs
proto/: helloworld.proto
src/: lib.rs  main.rs
src/protocol/: mod.rs  packet.rs
src/registry/: mod.rs  registry.rs
src/server/: greeter.rs  grpc.rs  mod.rs  tcp.rs
src/utils/: binary.rs
