[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
tonic = "0.8.3"
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["full"]}
etcd-client = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
ipconfig = "0.3.1"
async-trait = "0.1.64"
actix = "0.13.0"
actix-rt = "*"

[build-dependencies]
tonic-build = "0.8.4"

